--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1                 #API的版本号，版本号可以用 kubectl api
 kind: Service                  #表明资源对象，例如Pod、RC、Service、Namespace及Node等
 metadata:                      #资源对象的元数据定义
   name: gotest                 #service名称
+  namespace: go
 spec:                          #资源对象的详细定义，持久化到etcd中保存
   selector:                    #label选择器，管理label对应的pod
     app: gotest                #deploy的label_name
@@ -17,6 +18,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: gotest
+  namespace: go
   labels:
     app: gotest
 spec:
